--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -5,5 +5,6 @@
         <file>file002.txt</file>
         <file>file003.txt</file>
         <file>file004.txt</file>
+        <file>../icons/panda.png</file>
     </qresource>
 </RCC>
